--- a/fullstack-spring-react-todo-app/frontend/src/App.css
+++ b/fullstack-spring-react-todo-app/frontend/src/App.css
@@ -1,3 +1,17 @@
+label,
+input,
+button {
+  margin: 10px;
+  padding: 5px;
+}
+
+footer {
+  bottom: 0;
+  position: absolute;
+  width: 90%;
+  height: 40px;
+}
+
 .App {
   text-align: center;
   font-size: 20px;
